<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.SaludActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-9dp"
        tools:layout_editor_absoluteY="12dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="PERFIL DEL PERRO"
            android:textColor="@color/black" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:hint="@string/txtDesafios"
            android:inputType="text"
            android:maxLength="40"
            android:minHeight="48dp"
            tools:visibility="visible" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:hint="@string/txtCaracteristicas"
            android:inputType="text"
            android:maxLength="40"
            android:minHeight="48dp"
            tools:visibility="visible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SALUD"
            android:textColor="@color/black" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:hint="@string/txtEsterilizado"
            android:inputType="text"
            android:maxLength="40"
            android:minHeight="48dp"
            tools:visibility="visible" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:hint="@string/txtAlergias"
            android:inputType="text"
            android:maxLength="40"
            android:minHeight="48dp"
            tools:visibility="visible" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:hint="@string/txtPeso"
            android:inputType="text"
            android:maxLength="40"
            android:minHeight="48dp"
            tools:visibility="visible" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:hint="@string/txtCitaconelveterinario"
            android:inputType="text"
            android:maxLength="40"
            android:minHeight="48dp"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/btnGuardar"
            android:textAllCaps="false" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>