<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.RegistroActivity"
    android:background="@color/fondo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="15dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="162dp"
            android:src="@drawable/logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/logTxtCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="15dp"
                android:hint="@string/logTxtCorreo"
                android:inputType="textEmailAddress"
                android:maxLength="100" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/logTxtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:inputType="textEmailAddress"
                android:layout_marginVertical="15dp"
                android:maxLength="100"
                android:hint="@string/logTxtNombre"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/logTxtClave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="100"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="15dp"
                android:hint="@string/logTxtClave"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/logTxtClaveConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="100"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="15dp"
                android:hint="@string/logTxtClaveConfirm"/>
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/logChkRecordar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:text="@string/logChkRecordar"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="15dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/LogBtnIniciar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:text="@string/logBtnIniciar"
                android:textAllCaps="false"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/logBtnSalir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/logBtnSalir"
                android:textAllCaps="false"
                android:layout_weight="1"/>
        </LinearLayout>
        <TextView
            android:id="@+id/logLblRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logLblRegistro"
            android:gravity="center_horizontal"
            android:textColor="@color/purple_500"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|bottom"
            android:text="@string/logLblDerechos"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>