<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentos.AdoptaFragment"
    android:background="@color/fondo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_button"
            android:layout_margin="20dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:src="@drawable/catAdopta"/>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="20dp"
                android:layout_below="@id/imageView"
                android:gravity="bottom">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtAdopta1"
                    android:textColor="@color/black"
                    android:textSize="50sp"
                    android:layout_weight="2"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtAdopta2"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:layout_below="@id/linearLayout"
                android:gravity="bottom">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtAdopta3"
                    android:textColor="@color/black"
                    android:layout_weight="2"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtAdopta4"
                    android:textColor="@color/black"
                    android:layout_weight="4"/>
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_button"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_marginHorizontal="30dp"
                android:text="@string/btnAdapadrinar"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_button"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_marginHorizontal="30dp"
                android:text="@string/btnAdoptar"/>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_button"
            android:textColor="@color/white"
            android:layout_marginHorizontal="100dp"
            android:layout_marginTop="10dp"
            android:text="@string/btnSiguiente"/>
    </LinearLayout>

</FrameLayout>