<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.SubirFotoActivity"
    android:background="@color/fondo"
    tools:ignore="ExtraText">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-9dp"
        tools:layout_editor_absoluteY="12dp">

        <TextView
            android:id="@+id/Editarperfil"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_horizontal"
            android:hint="@string/txtEditarperfil"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="142dp"
            android:src="@drawable/perfil" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:hint="@string/txtNombree"
            android:inputType="text"
            android:maxLength="40"
            android:minHeight="48dp"
            tools:visibility="visible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="General"
            android:textColor="@color/black"/>

        <Spinner
            android:id="@+id/cboSexo"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="40dp"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/txtCumpleaños"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:clickable="false"
            android:focusable="false"
            android:hint="@string/txtCumpleaños"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/txtRaza"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:hint="@string/txtRaza"
            android:inputType="text"
            android:maxLength="40"
            android:minHeight="48dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        </LinearLayout>

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="139dp"
            android:layout_height="73dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/btnGuardar"
            android:textAllCaps="false" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>