<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentos.InicioFragment"
    android:background="@color/fondo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/nav_header_imageView"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="20dp"
            android:src="@drawable/psyduck_user"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtInicio1"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginLeft="20dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/map"
            android:layout_margin="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtInicio2"
            android:layout_margin="20dp"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginLeft="20dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/catInicio"
            android:layout_margin="20dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_button"
            android:text="@string/btnApoyar"
            android:layout_gravity="center"/>

    </LinearLayout>

</FrameLayout>